# augmentedreality

./: README.md
exercise1/: CMakeLists.txt  main.cpp
exercise2/: CMakeLists.txt  main.cpp
exercise3/: CMakeLists.txt  main.cpp
exercise4/: CMakeLists.txt  main.cpp
exercise5/: CMakeLists.txt  PoseEstimation.cpp  PoseEstimation.h  main.cpp
exercise6/: CMakeLists.txt  DrawPrimitives.h  main.cpp
exercise7/: CMakeLists.txt  main.cpp
exercise8/: CMakeLists.txt  DrawPrimitives.h  MarkerTracker.cpp  MarkerTracker.h  PoseEstimation.cpp  main.cpp
exercise9/: CMakeLists.txt  MarkerTracker.cpp  MarkerTracker.h  PoseEstimation.h  main.cpp
